Se agrego links de interes en la sección "Salud y bienestar"
Un video de Youtube de ejercicio físico y otro de una pagina web con recomendaciones generales de salud para el adulto mayor

--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -247,6 +247,8 @@
             <h5><b>Salud y Bienestar</b><br>
             Información Médica Actualizada: Mantente informado sobre temas de salud importantes, consejos de bienestar y recomendaciones médicas.
             Ejercicios y Actividades Físicas: Descubre rutinas de ejercicios suaves y actividades para mantenerse en forma a cualquier edad.<br><br></h5>
+            <h5><a href="https://www.youtube.com/watch?v=mg084EcNyHk">Ejercicio físico, CARDIO para Bajar de Peso en casa para Adultos Mayores</a></h5>
+            <h5><a href="https://www.clinicaalemana.cl/centro-de-extension/material-educativo/salud-y-bienestar-para-el-adulto-mayor#:~:text=Salud%20y%20bienestar%20para%20el%20adulto%20mayor%201,6%20Consejos%20simples%20de%20prevenci%C3%B3n%20de%20accidentes%20">Salud y bienestar para el adulto mayor</a></h5>
             <h5><b>Ocio y Aprendizaje</b><br>
             Talleres y Cursos: Explora una variedad de cursos en línea que van desde arte y música hasta tecnología y más.
             Juegos y Entretenimiento: Encuentra juegos estimulantes y entretenidos perfectos para mantener la mente activa.<br><br></h5>
