--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -255,7 +255,7 @@
             <h5><a href="https://www.youtube.com/watch?v=jxAgVn73OWg&list=PLEd0Gu3KmL1Mm_6RR7hN9kCVAFJb5yWh3&pp=iAQB">Curso de computación para adultos, GRATIS</a></h5>
             <h5><a href="https://www.youtube.com/watch?v=5OfMI7fqZTk&list=PL_VO62Uw04H-WSJAdyafPY9VuMjFbSFPL">Curso de pintura al óleo, GRATIS</a></h5>
             <h5><a href="https://www.youtube.com/watch?v=xkFnhsEDjUk&pp=ygUbQ1VSU09TIEdSQVRVSVRPUyBmb3RvZ3JhZmlh">Curso iniciación a la fotografía, GRATIS</a></h5>
-            <h5><a href="https://www.udemy.com/es/">udemy, GRATIS y PAGO</a></h5>
+            <h5><a href="https://www.udemy.com/es/">Udemy, GRATIS y PAGO</a></h5>
             <h5><b>Soporte y Asesoría</b><br>
             Asesoría Financiera y Legal: Accede a recursos que ofrecen consejos financieros y legales claros y confiables.
             Grupos de Apoyo y Comunidad: Conéctate con comunidades y grupos de soporte donde compartir experiencias y recibir apoyo.<br><br></h5>
