--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="icon" href="img/Fa.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-Z2wYKw8iOpWwKe8i3ZaiFlNqfv3EItbyoH8Rwfr7btdDpN/szF7kPwA1SraA2QQI" crossorigin="anonymous">
     <title>GranTech</title>
     <!--bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -310,8 +311,8 @@
             </div>
             <div class="redes-sociales">
                 <ul>
-                    <li><a href="URL_de_Tu_Facebook" target="_blank">Facebook</a></li>
-                    <li><a href="URL_de_Tu_Twitter" target="_blank">Twitter</a></li>
+                    <li><a href="URL_de_Tu_Facebook" target="_blank"><i class="fab fa-facebook"></i> Facebook</a></li>
+                    <li><a href="URL_de_Tu_Twitter" target="_blank"><i class="fab fa-twitter"></i> Twitter</a></li>
                     <!-- Agrega más redes sociales según sea necesario -->
                 </ul>
             </div>
