--- a/Tecnología para la Tercera Edad/home.html
+++ b/Tecnología para la Tercera Edad/home.html
@@ -253,10 +253,12 @@
             <h5><b>Ocio y Aprendizaje</b><br>
             Talleres y Cursos: Explora una variedad de cursos en línea que van desde arte y música hasta tecnología y más.
             Juegos y Entretenimiento: Encuentra juegos estimulantes y entretenidos perfectos para mantener la mente activa.<br><br></h5>
+            <h5><a href="https://www.chess.com/es/play/computer">Ajedrez</a></h5>
+            <h5><a href="https://www.cokitos.com/juegos-de-memoria-para-adultos/#:~:text=MEMORY%20CHALLENGE%3A%20Desaf%C3%ADos%20de%20Memoria%20MAZE%20SHADOW%3A%20Laberinto,Juego%20de%20Atenci%C3%B3n%20MEMORY%20MATCH%3A%20Memorama%20para%20Adultos">Juegos de memoria</a></h5>
             <h5><a href="https://www.youtube.com/watch?v=jxAgVn73OWg&list=PLEd0Gu3KmL1Mm_6RR7hN9kCVAFJb5yWh3&pp=iAQB">Curso de computación para adultos, GRATIS</a></h5>
             <h5><a href="https://www.youtube.com/watch?v=5OfMI7fqZTk&list=PL_VO62Uw04H-WSJAdyafPY9VuMjFbSFPL">Curso de pintura al óleo, GRATIS</a></h5>
             <h5><a href="https://www.youtube.com/watch?v=xkFnhsEDjUk&pp=ygUbQ1VSU09TIEdSQVRVSVRPUyBmb3RvZ3JhZmlh">Curso iniciación a la fotografía, GRATIS</a></h5>
-            <h5><a href="https://www.udemy.com/es/">Udemy, GRATIS y PAGO</a></h5>
+            <h5><a href="https://www.udemy.com/es/">Udemy, cursos GRATIS y de PAGO</a></h5>
             <h5><b>Soporte y Asesoría</b><br>
             Asesoría Financiera y Legal: Accede a recursos que ofrecen consejos financieros y legales claros y confiables.
             Grupos de Apoyo y Comunidad: Conéctate con comunidades y grupos de soporte donde compartir experiencias y recibir apoyo.<br><br></h5>
